Esercice 63 corrected. Commit this version, but before I get the new exercises maybe I come back to change something